welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: not found: value a
  a=false
  ^array123:5: error: not found: value a
      a = true
      ^array123:8: error: not found: value a
  return a
         ^